--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -14,8 +14,6 @@
           - python3-setuptools
           - python3-pip
 
-
-
     - name: Add Docker GPG apt Key
       apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
@@ -63,8 +61,8 @@
     - name: Setup kubernetes hosts file
       lineinfile:
         dest: /etc/hosts
-        regexp: '.*{{ kuberprivateip }}$'
-        line: "{{ kuberprivateip }} node-master"
+        regexp: '.*{{ kuburnetes_master }}$'
+        line: "{{ kuburnetes_master}} node-master"
 
     - name: Ansible replace string example
       replace:
@@ -84,5 +82,5 @@
 
     - name: Initialize the Kubernetes cluster using kubeadm
       command:
-        cmd:  sudo sh -c "kubeadm init --apiserver-advertise-address='{{ kuberprivateip }}' --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"  --ignore-preflight-errors=NumCPU 1> /tmp/initoutput.txt 2>&1"
+        cmd:  sudo sh -c "kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}' --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"  --ignore-preflight-errors=NumCPU 1> /tmp/initoutput.txt 2>&1"
         creates: /tmp/rankubeadm
