--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -82,5 +82,5 @@
 
     - name: Initialize the Kubernetes cluster using kubeadm
       command:
-        cmd:  sudo sh -c "kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}' --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"  --ignore-preflight-errors=NumCPU 1> /tmp/initoutput.txt 2>&1"
+        cmd:  sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}' --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"  --ignore-preflight-errors=NumCPU 1> /tmp/initoutput.txt 2>&1"
         creates: /tmp/rankubeadm
