First draft of installing node

--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -82,14 +82,5 @@
 
     - name: Initialize the Kubernetes cluster using kubeadm
       command:
-        cmd:  sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}' --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"  --ignore-preflight-errors=NumCPU 1> /tmp/initoutput.txt 2>&1"
+        cmd:  sudo sh -c "{{ cmd_to_run }}"
         creates: /tmp/rankubeadm
-
-    - name: create passing file
-      copy:
-        content: ""
-        dest: /tmp/rankubeadm
-        force: no
-        group: sys
-        owner: ubuntu
-        mode: 0555
