--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -82,7 +82,7 @@
 
     - name: Initialize the Kubernetes cluster using kubeadm
       command:
-        cmd:  sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}' --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"  --ignore-preflight-errors=NumCPU 1> /tmp/initoutput.txt 2>&1"
+        cmd:  sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}' --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"  --ignore-preflight-errors=NumCPU | tail -n 2 | tee /run_to_connect_node.sh"
         creates: /tmp/rankubeadm
 
     - name: create passing file
@@ -90,6 +90,6 @@
         content: ""
         dest: /tmp/rankubeadm
         force: no
-        group: sys
-        owner: ubuntu
+        group: root
+        owner: root
         mode: 0555
