--- a/playbooks/install-addons-kubernetes.yml
+++ b/playbooks/install-addons-kubernetes.yml
@@ -14,6 +14,17 @@
         path: /opt/cni/bin/
         state: directory
 
+
+    - name: Creates specific folders
+      file:
+        path: /etc/ssl/csr/
+        state: directory
+
+    - name: Creates specific folders
+      file:
+        path: /etc/ssl/private/
+        state: directory
+
     - name: CSR Request
       community.crypto.openssl_csr:
         path: /etc/ssl/csr/cni.csr
