--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -82,7 +82,12 @@
 
     - name: Initialize the Kubernetes cluster using kubeadm
       command:
-        cmd: sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}' --insecure-port=8080  --insecure-bind-address='{{ kuburnetes_master }}' --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443" --apiserver-bind-port --ignore-preflight-errors=NumCPU | tail -n 2 | tee /home/ubuntu/run_to_connect_node.sh"
+        cmd: sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}'  --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"     --ignore-preflight-errors=NumCPU | tail -n 2 | tee /home/ubuntu/run_to_connect_node.sh"
+        creates: /tmp/rankubeadm
+
+    - name: Initialize the Kubernetes cluster using kubeadm
+      command:
+        cmd: kubectl proxy --port=8080 &
         creates: /tmp/rankubeadm
 
     - name: create passing file
