--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -62,7 +62,7 @@
       lineinfile:
         dest: /etc/hosts
         regexp: '.*{{ kuburnetes_master }}$'
-        line: "{{ kuburnetes_master}} node-master"
+        line: "{{ kuburnetes_master }} node-master"
 
     - name: Ansible replace string example
       replace:
@@ -71,30 +71,54 @@
         replace: 'ExecStart=/usr/bin/dockerd --exec-opt native.cgroupdriver=systemd -H fd:// --containerd=/run/containerd/containerd.sock'
 
 
-    - name: Restart SystemCTL after changing config
-      command: systemctl daemon-reload
+    - name: Just force systemd to reread configs (2.4 and above)
+      systemd:
+        daemon_reload: yes
 
     - name: Restart docker
-      command: sudo /etc/init.d/docker restart
+      systemd:
+        state: restarted
+        daemon_reload: yes
+        name: docker
 
-    - name: Configure containerd
-      command: sudo systemctl restart containerd
+    - name: Restart containerd
+      systemd:
+        state: restarted
+        daemon_reload: yes
+        name: containerd
 
-    - name: Initialize the Kubernetes cluster using kubeadm
-      command:
-        cmd: sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}'  --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"     --ignore-preflight-errors=NumCPU | tail -n 2 | tee /home/ubuntu/run_to_connect_node.sh"
-        creates: /tmp/rankubeadm
-
-    - name: Initialize the Kubernetes cluster using kubeadm
-      command:
-        cmd: sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubectl proxy --port=8080 &"
-        creates: /tmp/rankubeadm
-
-    - name: create passing file
+    - name: Creating a file with content
       copy:
-        content: ""
-        dest: /tmp/rankubeadm
-        force: no
-        group: root
-        owner: root
-        mode: 0555
+        dest: "/etc/systemd/system/rc-local.service"
+        content: |
+          [Unit]
+          Description=/etc/rc.local Compatibility
+          ConditionPathExists=/etc/rc.local
+          [Service]
+          Type=forking
+          ExecStart=/etc/rc.local start
+          TimeoutSec=0
+          StandardOutput=tty
+          RemainAfterExit=yes
+          SysVStartPriority=99
+          [Install]
+          WantedBy=multi-user.target
+
+    - name: Creating a file with content
+      copy:
+        dest: "/etc/rc.local"
+        content: |
+          KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}'  --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"     --ignore-preflight-errors=NumCPU | tail -n 2 | tee /home/ubuntu/run_to_connect_node.sh
+          KUBECONFIG=/etc/kubernetes/admin.conf kubectl proxy --port=8080 &
+        mode: 0755
+
+    - name: Enable service rc-local and ensure it is not masked
+      systemd:
+        name: rc-local
+        enabled: yes
+        masked: no
+    - name: Make sure a service is running
+      systemd:
+        state: started
+        name: rc-local
+
