--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -108,8 +108,10 @@
       copy:
         dest: "/etc/rc.local"
         content: |
+          #!/bin/sh -e
           KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}'  --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"     --ignore-preflight-errors=NumCPU | tail -n 2 | tee /home/ubuntu/run_to_connect_node.sh
           KUBECONFIG=/etc/kubernetes/admin.conf kubectl proxy --port=8080 &
+          exit 0
         mode: 0755
 
     - name: Enable service rc-local and ensure it is not masked
