--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -104,12 +104,16 @@
           [Install]
           WantedBy=multi-user.target
 
-    - name: Creating a file with content
+    - name: Initialize the Kubernetes cluster using kubeadm
+      command:
+        cmd:  sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}'  --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"     --ignore-preflight-errors=NumCPU | tail -n 2 | tee /home/ubuntu/run_to_connect_node.sh"
+      creates: /etc/rc.local
+
+    - name: etc/rc.local
       copy:
         dest: "/etc/rc.local"
         content: |
           #!/bin/sh -e
-          KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}'  --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"     --ignore-preflight-errors=NumCPU | tail -n 2 | tee /home/ubuntu/run_to_connect_node.sh
           KUBECONFIG=/etc/kubernetes/admin.conf kubectl proxy --port=8080 &
           exit 0
         mode: 0755
