restart instead of start

--- a/playbooks/deploy-squid-playbook.yml
+++ b/playbooks/deploy-squid-playbook.yml
@@ -43,5 +43,5 @@
 
     - name: Make sure a service is running
       systemd:
-        state: started
+        state: restarted
         name: squid
