--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -139,7 +139,7 @@
 
     - name: Initialize the Kubernetes cluster using kubeadm
       command:
-        cmd:  /home/ubuntu/run_to_connect_node.sh
+        cmd:  sh -c "sudo /home/ubuntu/run_to_connect_node.sh"
         creates: /etc/rc.local
 
     - name: Creating a file with content
