--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -96,7 +96,7 @@
           ConditionPathExists=/etc/rc.local
           [Service]
           Type=forking
-          ExecStart=/etc/rc.local start
+          ExecStart=/etc/rc.local
           TimeoutSec=0
           StandardOutput=tty
           RemainAfterExit=yes
