--- a/playbooks/install-addons-kubernetes.yml
+++ b/playbooks/install-addons-kubernetes.yml
@@ -65,17 +65,25 @@
         url: https://github.com/projectcalico/cni-plugin/releases/download/v3.14.0/calico-amd64
         dest: /opt/cni/bin/calico
         mode: '0775'
+      environment:
+        http_proxy: '{{ http_ansible_proxy }}'
+        https_proxy: '{{ http_ansible_proxy }}'
+
 
     - name: Initialize the Kubernetes cluster using kubeadm
       get_url:
         url: https://github.com/projectcalico/cni-plugin/releases/download/v3.14.0/calico-ipam-amd64
         dest: /opt/cni/bin/calico-ipam
         mode: '0775'
+      environment:
+        http_proxy: '{{ http_ansible_proxy }}'
+        https_proxy: '{{ http_ansible_proxy }}'
 
     - name: Initialize the Kubernetes cluster using kubeadm
       command:
         cmd:  cp /tmp/cni.kubeconfig /etc/cni/net.d/calico-kubeconfig
         creates: /tmp/cniinstalled
+
     - name: Creating a file with content
       copy:
         dest: "/etc/systemd/system/rc-local.service"
