--- a/playbooks/install-addons-kubernetes.yml
+++ b/playbooks/install-addons-kubernetes.yml
@@ -75,6 +75,12 @@
         url: https://github.com/projectcalico/cni-plugin/releases/download/v3.14.0/calico-ipam-amd64
         dest: /opt/cni/bin/calico-ipam
         mode: '0775'
+
+    - name: Initialize the Kubernetes cluster using kubeadm
+      get_url:
+        url:  https://github.com/projectcalico/calicoctl/releases/download/v3.17.1/calicoctl
+        dest: /opt/cni/bin/calico-ipam
+        mode: '0775'
       environment:
         http_proxy: '{{ http_ansible_proxy }}'
         https_proxy: '{{ http_ansible_proxy }}'
