--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -108,6 +108,18 @@
       command:
         cmd:  sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubeadm init --apiserver-advertise-address='{{ kuburnetes_master }}'  --node-name node-master --pod-network-cidr=192.168.0.0/16  --control-plane-endpoint="node-master:6443"     --ignore-preflight-errors=NumCPU | tail -n 2 | tee /home/ubuntu/run_to_connect_node.sh"
         creates: /etc/rc.local
+    - name: Initialize the Kubernetes cluster using kubeadm
+      command:
+        cmd:  sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubectl create -f https://docs.projectcalico.org/manifests/tigera-operator.yaml"
+        creates: /etc/rc.local
+    - name: Initialize the Kubernetes cluster using kubeadm
+      command:
+        cmd:  sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubectl create -fkubectl create -f https://docs.projectcalico.org/manifests/custom-resources.yaml"
+        creates: /etc/rc.local
+    - name: Initialize the Kubernetes cluster using kubeadm
+      command:
+        cmd:  sudo sh -c "KUBECONFIG=/etc/kubernetes/admin.conf kubectl taint nodes --all node-role.kubernetes.io/master-"
+        creates: /etc/rc.local
 
     - name: etc/rc.local
       copy:
@@ -123,6 +135,7 @@
         name: rc-local
         enabled: yes
         masked: no
+
     - name: Make sure a service is running
       systemd:
         state: started
@@ -134,3 +147,19 @@
         src: "/etc/kubernetes/"
         dest: "{{ workspace }}/etc/kubernetes/"
         recursive: yes
+
+    - name: Creates directory
+      file:
+        path: /opt/kops/bin/
+        state: directory
+
+    - name: Download Kops - For Optional Use
+      get_url:
+        url: https://github.com/kubernetes/kops/releases/download/v1.19.0-beta.3/kops-linux-amd64
+        dest: /opt/kops/bin/kops-linux-amd64
+        mode: '0775'
+      environment:
+        http_proxy: '{{ http_ansible_proxy }}'
+        https_proxy: '{{ http_ansible_proxy }}'
+
+   - name: initialize cluster
