--- a/playbooks/install-addons-kubernetes.yml
+++ b/playbooks/install-addons-kubernetes.yml
@@ -75,6 +75,9 @@
         url: https://github.com/projectcalico/cni-plugin/releases/download/v3.14.0/calico-ipam-amd64
         dest: /opt/cni/bin/calico-ipam
         mode: '0775'
+      environment:
+        http_proxy: '{{ http_ansible_proxy }}'
+        https_proxy: '{{ http_ansible_proxy }}'
 
     - name: Initialize the Kubernetes cluster using kubeadm
       get_url:
