--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -174,6 +174,20 @@
         dest: /opt/cni/bin/calicoctl
         mode: '0775'
 
+    - name: Download Calico CTL  binary File
+      command:
+        cmd: /opt/cni/bin/calicoctl create -f /tmp/configurepool.yam
+        creates: /tmp/poolsetup
+
+    - name: create passing file
+      copy:
+        content: ""
+        dest: /tmp/poolsetup
+        force: no
+        group: root
+        owner: root
+        mode: 0555
+
     - name: Download Kops - For Optional Use
       get_url:
         url: https://github.com/kubernetes/kops/releases/download/v1.19.0-beta.3/kops-linux-amd64
