--- a/playbooks/install-typha-calinco-node.yml
+++ b/playbooks/install-typha-calinco-node.yml
@@ -41,7 +41,7 @@
 
     - name: Configure typha ssl
       command:
-        cmd: openssl x509 -req -in /etc/ssl/csr/typha.csr -CA /etc/kubernetes/pki/typhaca.crt -CAkey etc/ssl/private/typhaca.key -CAcreateserial -out /etc/kubernetes/pki/typha.crt -days 365
+        cmd: openssl x509 -req -in /etc/ssl/csr/typha.csr -CA /etc/kubernetes/pki/typhaca.crt -CAkey /etc/ssl/private/typhaca.key -CAcreateserial -out /etc/kubernetes/pki/typha.crt -days 365
         creates: /tmp/typhainstalled
 
     - name: Configure typha secret
